[package]
name = "rustmark"
version = "0.1.0"
authors = ["akay <aungkhantko@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
regex = "1"
devtimer = "4.0"
openssl-sys = "0.9"
openssl = "0.10"
